Add Logout Swagger and etc
